projects/compiler/test/typechecker/invocation/error_macro_output_parse_error.out
Error at %FILE_NAME%:9:13
Macro 'uhOh' produced invalid code at this invocation site
  |  val x = uhOh()
                 ^
The generated code contains the following error:

Error at <generated by macro 'uhOh'>:1:2
Unexpected token '+':
  |  [+]
      ^
