projects/compiler/test/typechecker/invocation/error_macro_output_parse_error.abra
import macro, InjectedCode from "meta"

@macro
func uhOh(): InjectedCode {
  InjectedCode.new()
    .append("[+]")
}

val x = uhOh()
